--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -65,7 +66,7 @@
     <div class="modal-screen hidden">
       <div class="modal">
         <header>
-          <button>
+          <button class="x-btn">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
